# ASDscreener

./: .gitignore  README.md  design-document.md  directory-structure.md  pyproject.toml
asdscreener/: __init__.py
asdscreener/core/: __init__.py  api_properties.py  polymer_properties.py  system_definition.py
